--- a/src/app/document/document-show/document-show.component.html
+++ b/src/app/document/document-show/document-show.component.html
@@ -1,20 +1,16 @@
-<div class="container pt-5 pb-3">
-  <div class="row">
-    <div class="col-12">
-<!--      <h2 *ngIf="document == null || document.title == null || document.title == ''" >Document</h2>-->
-      <h2 *ngIf="document != null && document.title != ''" >{{document.title}}</h2>
-      <hr class="header">
-    </div>
-  </div>
-</div>
-
 <div class="container">
   <div *ngIf="errorMsg != null" class="row mx-auto pt-4">
     <p class="errorMsg p-3">{{errorMsg}}</p>
   </div>
 </div>
 
-<div *ngIf="success" class="container">
+<div *ngIf="success" class="container pt-5 pb-3">
+  <div class="row">
+    <div class="col-12">
+      <h2 *ngIf="document != null && document.title != ''" >{{document.title}}</h2>
+      <hr class="header">
+    </div>
+  </div>
   <div class="row">
     <div class="col-xl-6 pl-3">
       <i class="fa fa-calendar-o pr-2"></i>
@@ -26,6 +22,7 @@
         <a (click)="downloadPDF()" class="regular-btn darker radius">Download PDF <i class="fa fa-download"></i></a>
       </div>
     </div>
+  </div>
   <div class="row w-100">
     <div class="col-12">
       <div class="document-container p-3 m-1">
@@ -38,12 +35,9 @@
 </div>
 <!-- document end -->
 
-<!-- Loading Overlay
-  No Page loading here just in case google site map doesnt wait to scrap
- -->
-
-<!--<div id="overlay" *ngIf="isPageLoading">-->
-<!--  <div id="spinner" class="spinner-border" role="status">-->
-<!--    <span class="sr-only">Loading...</span>-->
-<!--  </div>-->
-<!--</div>-->
+<!-- Loading Overlay -->
+<div id="overlay" *ngIf="isPageLoading">
+  <div id="spinner" class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</div>
