--- a/src/app/marketing/electric-utility/electric-utility.component.html
+++ b/src/app/marketing/electric-utility/electric-utility.component.html
@@ -1,26 +1,40 @@
 <div class="">
-    <section class="landing-header">
-        <div class="container">
-            <div class="row flex flex-row mx-0 my-5 py-5">
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <h1 class="text-dark">Local Government Monitoring for Electric Utilities</h1>
-                    <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <a class="section-links primary mt-4" [routerLink]="['/search']">Try it now!</a>
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 mt-0 mt-sm-3">
-                    <div class="landing-header-img-wrapper">
-                        <img src="https://d3r49iyjzglexf.cloudfront.net/home/hero-cicd-best-practices-ece8ee5878412c8555aca63e8d678d7369e08bf84abbb9c0e9a9fe53f6de53b7.jpg" alt="" class="img-responsive center">
-                    </div>
-                </div>
-            </div>
+  <section id="landing-header">
+    <div class="jumbotron">
+      <div class="container">
+        <div class="row flex flex-row mx-0 my-5 py-5">
+          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <h1 class="text-light">Local Government Monitoring for Electric Utilities</h1>
+            <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <button class="btn cs-btn section-links" [routerLink]="['/search']">Try it now!</button>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
+
+<!--    <section class="landing-header">-->
+<!--        <div class="container">-->
+<!--            <div class="row flex flex-row mx-0 my-5 py-5">-->
+<!--                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">-->
+<!--                    <h1 class="text-dark">Local Government Monitoring for Electric Utilities</h1>-->
+<!--                    <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>-->
+<!--                    <a class="section-links primary mt-4" [routerLink]="['/search']">Try it now!</a>-->
+<!--                </div>-->
+<!--                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 mt-0 mt-sm-3">-->
+<!--                    <div class="landing-header-img-wrapper">-->
+<!--                        <img src="https://d3r49iyjzglexf.cloudfront.net/home/hero-cicd-best-practices-ece8ee5878412c8555aca63e8d678d7369e08bf84abbb9c0e9a9fe53f6de53b7.jpg" alt="" class="img-responsive center">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
     <section class="highlight-features">
         <div class="container">
             <div class="wrapper row mx-0 my-5 py-5 px-3">
                 <div class="col-12 pb-5">
-                  <h3 class="text-dark">Watches</h3>
+                  <h3 class="text-dark">Electric Utility Watches</h3>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 px-3 seperator">
                     <p class="mb-4"><span class="badge blue">Infrastructure</span></p>
@@ -52,7 +66,7 @@
 <!--                    <p class="type-label">Changelog</p>-->
                     <h2 class="text-dark">Keep up with the latest documents related to Electric Utilities</h2>
                     <div class="my-4">
-                      <a class="section-links primary mt-4" href="#">Explore More</a>
+                      <button class="btn cs-btn section-links" [routerLink]="['/contact']">Request a Demo</button>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
