push new update

--- a/src/styles.css
+++ b/src/styles.css
@@ -1122,420 +1122,6 @@ th.mat-header-cell {
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 
-@font-face {
-  font-family: FontAwesome;
-  /*src: url(fontawesome-webfont.674f50d287a8c48dc19b.eot?v=4.7.0);*/
-  /*src: url(fontawesome-webfont.674f50d287a8c48dc19b.eot?#iefix&v=4.7.0) format("embedded-opentype"), url(fontawesome-webfont.af7ae505a9eed503f8b8.woff2?v=4.7.0) format("woff2"), url(fontawesome-webfont.fee66e712a8a08eef580.woff?v=4.7.0) format("woff"), url(fontawesome-webfont.b06871f281fee6b241d6.ttf?v=4.7.0) format("truetype"), url(fontawesome-webfont.912ec66d7572ff821749.svg?v=4.7.0#fontawesomeregular) format("svg");*/
-  font-weight: 400;
-  font-style: normal
-}
-
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale
-}
-
-.fa-lg {
-  font-size: 1.33333333em;
-  line-height: .75em;
-  vertical-align: -15%
-}
-
-.fa-2x {
-  font-size: 2em
-}
-
-.fa-3x {
-  font-size: 3em
-}
-
-.fa-4x {
-  font-size: 4em
-}
-
-.fa-5x {
-  font-size: 5em
-}
-
-.fa-ul {
-  padding-left: 0;
-  margin-left: 2.14285714em;
-  list-style-type: none
-}
-
-.fa-ul>li {
-  position: relative
-}
-
-.fa-li {
-  position: absolute;
-  left: -2.14285714em;
-  width: 2.14285714em;
-  top: .14285714em;
-  text-align: center
-}
-
-.fa-li.fa-lg {
-  left: -1.85714286em
-}
-
-@-webkit-keyframes fa-spin {
-  0% {
-    transform: rotate(0)
-  }
-  to {
-    transform: rotate(359deg)
-  }
-}
-
-@keyframes fa-spin {
-  0% {
-    transform: rotate(0)
-  }
-  to {
-    transform: rotate(359deg)
-  }
-}
-
-.fa-search:before {
-  content: "\f002"
-}
-
-.fa-th:before {
-  content: "\f00a"
-}
-
-.fa-th-list:before {
-  content: "\f00b"
-}
-
-.fa-close:before,
-.fa-times:before {
-  content: "\f00d"
-}
-
-.fa-search-plus:before {
-  content: "\f00e"
-}
-
-.fa-power-off:before {
-  content: "\f011"
-}
-
-.fa-home:before {
-  content: "\f015"
-}
-
-.fa-download:before {
-  content: "\f019"
-}
-
-.fa-play-circle-o:before {
-  content: "\f01d"
-}
-
-.fa-list-alt:before {
-  content: "\f022"
-}
-
-.fa-text-height:before {
-  content: "\f034"
-}
-
-.fa-text-width:before {
-  content: "\f035"
-}
-
-.fa-align-center:before {
-  content: "\f037"
-}
-
-.fa-align-right:before {
-  content: "\f038"
-}
-
-.fa-align-justify:before {
-  content: "\f039"
-}
-
-.fa-list:before {
-  content: "\f03a"
-}
-
-.fa-image:before {
-  content: "\f03e"
-}
-
-.fa-adjust:before {
-  content: "\f042"
-}
-
-.fa-play:before {
-  content: "\f04b"
-}
-
-.fa-stop:before {
-  content: "\f04d"
-}
-
-.fa-forward:before {
-  content: "\f04e"
-}
-
-.fa-chevron-right:before {
-  content: "\f054"
-}
-
-.fa-plus-circle:before {
-  content: "\f055"
-}
-
-.fa-times-circle:before {
-  content: "\f057"
-}
-
-.fa-info-circle:before {
-  content: "\f05a"
-}
-
-.fa-times-circle-o:before {
-  content: "\f05c"
-}
-
-.fa-expand:before {
-  content: "\f065"
-}
-
-.fa-plus:before {
-  content: "\f067"
-}
-
-.fa-calendar:before {
-  content: "\f073"
-}
-
-.fa-comment:before {
-  content: "\f075"
-}
-
-.fa-chevron-up:before {
-  content: "\f077"
-}
-
-.fa-chevron-down:before {
-  content: "\f078"
-}
-
-.fa-comments:before {
-  content: "\f086"
-}
-
-.fa-sign-out:before {
-  content: "\f08b"
-}
-
-.fa-sign-in:before {
-  content: "\f090"
-}
-
-.fa-phone:before {
-  content: "\f095"
-}
-
-.fa-filter:before {
-  content: "\f0b0"
-}
-
-.fa-group:before {
-  content: "\f0c0"
-}
-
-.fa-link:before {
-  content: "\f0c1"
-}
-
-.fa-list-ul:before {
-  content: "\f0ca"
-}
-
-.fa-comment-o:before {
-  content: "\f0e5"
-}
-
-.fa-comments-o:before {
-  content: "\f0e6"
-}
-
-.fa-mobile-phone:before,
-.fa-mobile:before {
-  content: "\f10b"
-}
-
-.fa-circle-o:before {
-  content: "\f10c"
-}
-
-.fa-circle:before {
-  content: "\f111"
-}
-
-.fa-code:before {
-  content: "\f121"
-}
-
-.fa-info:before {
-  content: "\f129"
-}
-
-.fa-calendar-o:before {
-  content: "\f133"
-}
-
-.fa-chevron-circle-right:before {
-  content: "\f138"
-}
-
-.fa-chevron-circle-up:before {
-  content: "\f139"
-}
-
-.fa-chevron-circle-down:before {
-  content: "\f13a"
-}
-
-.fa-html5:before {
-  content: "\f13b"
-}
-
-.fa-css3:before {
-  content: "\f13c"
-}
-
-.fa-play-circle:before {
-  content: "\f144"
-}
-
-.fa-ticket:before {
-  content: "\f145"
-}
-
-.fa-toggle-down:before {
-  content: "\f150"
-}
-
-.fa-toggle-up:before {
-  content: "\f151"
-}
-
-.fa-toggle-right:before {
-  content: "\f152"
-}
-
-.fa-university:before {
-  content: "\f19c"
-}
-
-.fa-support:before {
-  content: "\f1cd"
-}
-
-.fa-send:before {
-  content: "\f1d8"
-}
-
-.fa-send-o:before {
-  content: "\f1d9"
-}
-
-.fa-history:before {
-  content: "\f1da"
-}
-
-.fa-header:before {
-  content: "\f1dc"
-}
-
-.fa-at:before {
-  content: "\f1fa"
-}
-
-.fa-toggle-off:before {
-  content: "\f204"
-}
-
-.fa-toggle-on:before {
-  content: "\f205"
-}
-
-.fa-cc:before {
-  content: "\f20a"
-}
-
-.fa-hotel:before {
-  content: "\f236"
-}
-
-.fa-sticky-note:before {
-  content: "\f249"
-}
-
-.fa-sticky-note-o:before {
-  content: "\f24a"
-}
-
-.fa-500px:before {
-  content: "\f26e"
-}
-
-.fa-calendar-plus-o:before {
-  content: "\f271"
-}
-
-.fa-calendar-times-o:before {
-  content: "\f273"
-}
-
-.fa-map-o:before {
-  content: "\f278"
-}
-
-.fa-map:before {
-  content: "\f279"
-}
-
-.fa-edge:before {
-  content: "\f282"
-}
-
-.fa-stop-circle:before {
-  content: "\f28d"
-}
-
-.fa-stop-circle-o:before {
-  content: "\f28e"
-}
-
-.fa-first-order:before {
-  content: "\f2b0"
-}
-
-.fa-fa:before {
-  content: "\f2b4"
-}
-
-.fa-id-badge:before {
-  content: "\f2c1"
-}
-
-.fa-s15:before {
-  content: "\f2cd"
-}
-
-
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -1684,11 +1270,10 @@ code {
 }
 
 img {
-  border-style: none
-}
-
-img {
-  vertical-align: middle
+  border-style: none;
+  vertical-align: middle;
+  width: 700px;
+  height: 77px;
 }
 
 th {
