--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
   <a class="navbar-brand" [routerLink]="['/']">
-    <img src="../assets/images/logo/logoRegGreyVertical.png" alt="Council Search">
+    <img src="../assets/images/logo/logoRegGreyVertical.png" width="200" alt="Council Search">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,11 +21,11 @@
         <a class="nav-link" [routerLink]="['/contact']">Contact</a>
       </li>
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:false}" *ngIf="!isLoggedIn" class="mx-2 nav-item">
-        <i class="fa fa-user"></i>
+        <i class="fas fa-user"></i>
         <a class="nav-link" [routerLink]="['/login']" >Login</a>
       </li>
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" *ngIf="isLoggedIn" class="mx-2 nav-item">
-        <i class="fa fa-sign-out"></i>
+        <i class="fas fa-sign-out"></i>
         <a class="nav-link" (click)="logout()" >Logout</a>
       </li>
     </ul>
