Added CSS that respects  \n so we no longer have dom  BR elements

--- a/src/app/document/document-show/document-show.component.css
+++ b/src/app/document/document-show/document-show.component.css
@@ -33,6 +33,7 @@ hr.header{
   background-color: #ffffff;
   /*padding: 30px;*/
   word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 /* Error/Loading stuff */
