--- a/src/app/search/main/main.component.html
+++ b/src/app/search/main/main.component.html
@@ -6,7 +6,7 @@
       <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12 mx-auto">
         <form class="form-group" (submit)="search(true)">
           <div class="input-group">
-            <input id="searchBox" class="form-control py-2" type="search" value="" autocomplete="off" placeholder="I'm looking for..."
+            <input id="searchBox" class="form-control py-2" type="search" value="" autocomplete="off" placeholder="Search all agendas and minutes..."
                    matInput
                    [formControl]="q"
                    [matAutocomplete] = "auto">
