--- a/src/app/document/document-show/document-show.component.css
+++ b/src/app/document/document-show/document-show.component.css
@@ -4,10 +4,207 @@
   }
 }
 
+body{
+  background-color: white;
+}
+
+
+/* Search box */
+#searchBox {
+  height: calc(1.5em + 1rem + 2px);
+  padding: .5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  width: 83%;
+  z-index: 2;
+  margin-top: 0;
+  text-align: left;
+  border-radius: 0;
+}
+
+.searchButton {
+  background-color: #d92027;
+  color: #fff;
+  border: 1px solid #d92027;
+  right: 5px;
+  z-index: 1;
+}
+
+.searchButton:hover {
+  color: #fff
+}
+
+.input-group-append,
+.input-group-append:hover,
+.input-group-append button {
+  background-color: #d92027;
+  color: #fff;
+  cursor: pointer;
+  /*border-top-right-radius: .25rem;*/
+  /*border-bottom-right-radius: 0.25rem;*/
+}
+
+.mat-autocomplete-panel {
+  min-width: 112px;
+  max-width: 280px;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  visibility: hidden;
+  max-width: none;
+  max-height: 256px;
+  position: relative;
+  width: 100%;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px
+}
+
+.mat-autocomplete-panel.mat-autocomplete-visible {
+  visibility: visible
+}
+
+.mat-autocomplete-panel.mat-autocomplete-hidden {
+  visibility: hidden
+}
+
+.mat-autocomplete-panel-above .mat-autocomplete-panel {
+  border-radius: 0;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px
+}
+
+.mat-autocomplete-panel .mat-divider-horizontal {
+  margin-top: -1px
+}
+
+.cdk-high-contrast-active .mat-autocomplete-panel {
+  outline: solid 1px
+}
+
+.search-zone {
+  /*padding-top: 50px*/
+}
+
+@media (max-width:767px) {
+  .search-zone {
+    /*padding-top: 60px*/
+  }
+}
+
+@media (min-width:768px) and (max-width:991px) {
+  .search-zone {
+    /*padding-top: 80px*/
+  }
+}
+
+@media (min-width:992px) and (max-width:1200px) {
+  .search-zone {
+    /*padding-top: 100px*/
+  }
+}
+
+.search-zone .search_title h3 {
+  font-size: 20px;
+  color: #2e004b;
+  font-weight: 400;
+  margin-bottom: 51px
+}
+
+.teaser-zone {
+  padding: 170px;
+  text-align: center
+}
+
+@media (max-width:767px) {
+  .teaser-zone {
+    padding: 150px 0
+  }
+}
+
+@media (min-width:768px) and (max-width:991px) {
+  .teaser-zone {
+    padding: 150px 0
+  }
+}
+
+.teaser-zone h3 {
+  font-size: 60px;
+  color: #fff;
+  font-weight: 900;
+  margin-bottom: 0;
+  text-transform: capitalize
+}
+
+@media (max-width:767px) {
+  .teaser-zone h3 {
+    font-size: 30px
+  }
+}
+
+@media (min-width:768px) and (max-width:991px) {
+  .teaser-zone h3 {
+    font-size: 40px
+  }
+}
+
+.teaser-zone {
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  padding: 40px 0
+}
+
+@media (max-width:991px) {
+  .teaser-zone {
+    padding: 60px 0 40px
+  }
+}
+
+.teaser-zone .teaser-text h3 {
+  font-size: 60px;
+  color: #fff;
+  margin-bottom: 10px;
+  font-weight: 900
+}
+
+@media (max-width:767px) {
+  .teaser-zone .teaser-text h3 {
+    margin-bottom: 20px;
+    font-size: 25px
+  }
+}
+
+@media (min-width:768px) and (max-width:991px) {
+  .teaser-zone .teaser-text h3 {
+    margin-bottom: 30px;
+    font-size: 30px
+  }
+}
+
+.teaser-background {
+  background-color: #050429
+}
+
+
+/* Document */
+
+@media (max-width:400px) {
+  h2{
+    font-family: Roboto, sans-serif;
+    color: #07092f;
+    text-align: left;
+    font-size:25px;
+  }
+}
+
 h2{
   font-family: Roboto, sans-serif;
   color: #07092f;
-  text-align: justify;
+  text-align: left;
 }
 
 hr.header{
