--- a/src/styles.css
+++ b/src/styles.css
@@ -2839,7 +2839,7 @@ input[type=submit].btn-block {
 
 @media (max-width:767px) {
   .navbar-brand img {
-    width: 150px
+    /*width: 150px*/
   }
 }
 
