Document: Make sure to ask for user download info once the download button is clicked.

--- a/src/styles.css
+++ b/src/styles.css
@@ -5095,3 +5095,7 @@ a.text-dark:hover {
 .result-content span.highlight {
   background: #fcff00;
 }
+
+.cdk-overlay-container {
+    z-index: 2000 !important;
+}
