--- a/src/styles.css
+++ b/src/styles.css
@@ -5092,7 +5092,7 @@ a.text-dark:hover {
   }
 }
 
-.result-content span.highlight {
+.result-content span.highlight, .document-content span.highlight {
   background: #fcff00;
 }
 
