--- a/src/app/document/download-dialog/download-dialog.component.html
+++ b/src/app/document/download-dialog/download-dialog.component.html
@@ -1,25 +1,41 @@
-<form class="email-form" (ngSubmit)="onDownloadFormSubmit()">
+<div class="container pb-3">
+  <div class="row">
+    <div class="col-12">
+      <h4 class="downloadHeader">Download PDF</h4>
+      <hr class="header">
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div *ngIf="errorMsg != null" class="row mx-auto">
+    <p class="errorMsg pl-2">{{errorMsg}}</p>
+  </div>
+</div>
+
+<div class="container">
+  <form class="email-form" (ngSubmit)="onDownloadFormSubmit()">
     <div class="row">
-        <div class="col-12">
-            <div class="form-group">
-                <input [(ngModel)]="downloadFormData.name" name="name" class="form-control" type="text" placeholder="Enter your name">
-            </div>
+      <div class="col-12">
+        <div class="form-group">
+          <input [(ngModel)]="contact.name" name="name" class="form-control" type="text" placeholder="Enter your name">
         </div>
-        <div class="col-12">
-            <div class="form-group">
-                <input [(ngModel)]="downloadFormData.company" name="company" class="form-control" type="text" placeholder="Enter company">
-            </div>
+      </div>
+      <div class="col-12">
+        <div class="form-group">
+          <input [(ngModel)]="contact.company" name="company" class="form-control" type="text" placeholder="Enter company">
         </div>
-        <div class="col-12">
-            <div class="form-group">
-                <input [(ngModel)]="downloadFormData.email" name="email" class="form-control" type="email" placeholder="Enter email">
-            </div>
+      </div>
+      <div class="col-12">
+        <div class="form-group">
+          <input [(ngModel)]="contact.email" name="email" class="form-control" type="email" placeholder="Enter email" ngModel email>
         </div>
+      </div>
+      <input [(ngModel)]="contact.type" name="type" class="form-control" type="hidden">
     </div>
     <div class="form-group mt-3 float-right">
-        <button type="button" class="btn btn-primary cancel-btn" (click)="cancelDownload()">Cancel</button>
-        <button type="submit" class="btn btn-primary submit-btn ml-2">Send</button>
-        <br>
-        <br>
+      <button type="button" class="btn btn-primary cancel-btn" (click)="cancelDownload()">Cancel</button>
+      <button type="submit" class="btn btn-primary submit-btn ml-2">Download</button>
     </div>
-</form>
+  </form>
+</div>
