Added activity tracking for doc search

--- a/src/app/document/document-show/document-show.component.html
+++ b/src/app/document/document-show/document-show.component.html
@@ -37,7 +37,7 @@
   </div>
 </div>
 
-<div *ngIf="success" class="container pt-5 pb-3">
+<div *ngIf="success" class="container pt-5 pb-3 px-xl-4 px-lg-3 px-md-2 px-sm-0 px-0">
   <div class="row">
     <div class="col-12">
       <h2 *ngIf="document != null && document.title != ''" >{{document.title}}</h2>
